--- a/FrequencyDomain/app/build.gradle
+++ b/FrequencyDomain/app/build.gradle
@@ -44,4 +44,6 @@ android { // main settings for your application
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'com.google.firebase:firebase-messaging:11.0.2'
+
 }
