--- a/FrequencyDomain/local.properties
+++ b/FrequencyDomain/local.properties
@@ -7,7 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Feb 01 20:17:57 CET 2017
-ndk.dir=/home/farez/Android/Sdk/ndk-bundle
-sdk.dir=/home/farez/Android/Sdk
+#Mon Jul 10 08:47:50 CEST 2017
+sdk.dir=/Users/Farez/Library/Android/sdk
 superpowered.dir=/home/farez/SuperpoweredSDK/Superpowered
