--- a/CounterGame/app/src/main/AndroidManifest.xml
+++ b/CounterGame/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="youth.livetsord.se.countergame">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permisson.ACCESS_WIFI_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -10,6 +12,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
