--- a/youthserver/sftp-config.json
+++ b/youthserver/sftp-config.json
@@ -19,7 +19,7 @@
     //"password": "password",
     //"port": "22",
     
-    "remote_path": "/home/ubuntu/app",
+    "remote_path": "/home/ubuntu/go/src/youth2k/youthserver",
     "ignore_regexes": [
         "\\.sublime-(project|workspace)", "sftp-config(-alt\\d?)?\\.json",
         "sftp-settings\\.json", "/venv/", "\\.svn/", "\\.hg/", "\\.git/",
