--- a/CounterGame/app/build.gradle
+++ b/CounterGame/app/build.gradle
@@ -4,14 +4,15 @@ apply plugin: 'kotlin-android-extensions'
 
 
 android {
+    ext.anko_version = "0.10.1"
     compileSdkVersion 24
-    buildToolsVersion "26.0.0"
+    buildToolsVersion "26.0.2"
     defaultConfig {
-        applicationId "youth.livetsord.se.countergame"
+        applicationId "youth.livetsord.se.youthconf"
         minSdkVersion 16
         targetSdkVersion 24
-        versionCode 1
-        versionName "1.0"
+        versionCode 9
+        versionName "1.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -21,6 +22,8 @@ android {
         }
     }
 }
+
+
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -32,12 +35,23 @@ dependencies {
 
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.github.kittinunf.fuel:fuel-android:1.8.0'
-    compile 'com.google.firebase:firebase-messaging:9.6.1'
+    compile 'com.google.firebase:firebase-messaging:9.8.0'
     compile 'com.android.support:design:24.2.1'
     compile 'com.google.code.gson:gson:2.4'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile "org.jetbrains.anko:anko-appcompat-v7-coroutines:0.10.0-beta-2"
+
+
 
     testCompile 'junit:junit:4.12'
 }
+
+kotlin {
+    experimental {
+        coroutines "enable"
+    }
+}
+
 repositories {
     mavenCentral()
 }
