--- a/CounterGame/app/src/main/AndroidManifest.xml
+++ b/CounterGame/app/src/main/AndroidManifest.xml
@@ -13,7 +13,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:hardwareAccelerated="false"
+
         android:theme="@style/AppTheme"
+        android:largeHeap="true"
+
         android:fullBackupContent="true">
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
