--- a/Youth/Youth/GoogleService-Info.plist
+++ b/Youth/Youth/GoogleService-Info.plist
@@ -23,7 +23,7 @@
 	<key>STORAGE_BUCKET</key>
 	<string>youthconf-lo.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<true/>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
 	<true/>
 	<key>IS_APPINVITE_ENABLED</key>
@@ -31,7 +31,7 @@
 	<key>IS_GCM_ENABLED</key>
 	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<false/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:75917400886:ios:c4f82ff0d56417a4</string>
 	<key>DATABASE_URL</key>
